# IntelligentNetworks

./: .gitignore  CMakeLists.txt
IntNet/: intnet.hpp
IntNet/inc/: NetworkStructure.hpp  NeuralNetwork.hpp
IntNet/src/: NetworkStructure.cpp  NeuralNetwork.cpp
examples/SpaceFly/: CMakeLists.txt
examples/SpaceFly/src/: main.cpp
examples/XOR/: CMakeLists.txt
examples/XOR/src/: main.cpp
lib/ml/: ml.hpp
lib/ml/inc/: NetworkStructure.hpp  NeuralNetwork.hpp
lib/ml/src/: NetworkStructure.cpp  NeuralNetwork.cpp
src/: main.cpp
